--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ext-ci4mssql2migration\\": "src/"
+            "sql2migration\\": "src/"
         }
     },
     "extra": {
